--- a/style.css
+++ b/style.css
@@ -3,9 +3,12 @@
     /* margin: 0; */
     /* padding: 0; */
 }
+body{
+    font-family: 'Montserrat', sans-serif;
+}
 section{
     display: flex;
-    font-family: 'Montserrat', sans-serif;
+    
     margin-top: 7em;
 }
 section a{
@@ -87,6 +90,7 @@ section h3{
     margin: 0px 500px;
     padding-top: 20px;
     padding-bottom: 0px;
+    font-weight: 200;
 }
 .one-third{
     width: 25%;
